--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
@@ -17,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.8",
     "zustand": "^5.0.3"
   },
